# Archivator.-smx

./: CMakeLists.txt  Makefile  final_report.md  main.cpp
lib/: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  Code.cpp  Code.h  Node.cpp  Node.h  OC_lib.cpp  OC_lib.h  OS_lib.cpp  OS_lib.h  PrefixCodes.cpp  PrefixCodes.h  compression.cpp  compression.h  huffman.cpp  huffman.h  reader.cpp  reader.h  writer.cpp  writer.h
lib/reader/: CMakeLists.txt  reader.cpp  reader.h
lib/writer/: CMakeLists.txt  writer.cpp  writer.h
